--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8",
+    "morgan": "^1.10.0",
     "multer": "^1.4.4"
   }
 }
